@@ -3,6 +3,10 @@
 	* configure.in: Release 1.93.
 	* NEWS: Update.
 
+	* userhelper-wrap.c (struct response): Remove member ready.
+	(userhelper_parse_childout): Use prompt_type directly instead of
+	resp->ready.
+
 	* userhelper-wrap.c (userhelper_parse_childout): Only respond with
 	UH_SYNC_POINT once to an UH_SYNC_POINT with no responses requested,
 	not after each new message.
